# DeFi-Assessment

./: .gitignore  README.md  contract-knn.ipynb  contract-rf-log.ipynb  contract-rf.ipynb  setup.cfg
data/88mph/: 88mph_fix_commits.csv
data/Alchemix/: Alchemix_fix_commits.csv
data/Compound/: Compound_fix_commits.csv
data/Cream Finance/: Cream Finance_fix_commits.csv
data/Inverse finance/: Inverse finance_fix_commits.csv
data/TrueFi/: TrueFi_fix_commits.csv
data/UMA/: UMA_fix_commits.csv
datasets/: contract.csv  platforms.csv
datasets/Aave/: Aave_fix_commits.csv
datasets/BarnBridge/: BarnBridge_fix_commits.csv
datasets/Synthetix/: Synthetix_fix_commits.csv
datasets/Yield Protocol/: Yield Protocol_fix_commits.csv
datasets/bZx/: bZx_fix_commits.csv
datasets/dydx/: dydx_fix_commits.csv
defi_assessment/: __init__.py  cli.py  run.py  scores.csv
defi_assessment/app/: data.py  suggest.py
defi_assessment/data_collection/: contract.py  finance.py
defi_assessment/git_tool/: gitcmd.py  parser.py
defi_assessment/modelling/: contract.py  finance.py
defi_assessment/preprocess/: contract.py
defi_lend_eval/: cli.py  run.py
defi_lend_eval/app/: data.py
defi_lend_eval/data_collection/: contract.py  finance.py  finance_data.py
defi_lend_eval/git_tool/: gitcmd.py  parser.py
defi_lend_eval/modelling/: contract.py  finance.py
defi_lend_eval/preprocess/: contract.py
docs/: Engineering Guideline.md  References.md  platforms.csv
notebooks/: contract-knn.ipynb  contract-lr.ipynb  contract-rnn-msg.ipynb
python/: cli.py
python/app/: route.py
python/data_collection/: fininace_data.py  gitcmd.py  smart_contract.py  token_value.py
python/modelling/: contract.py  esg_model.py  finance_model.py
python/preprocess/: contract.py
(+11 files in other folders)
