[metadata]
name = DeFi Assessment
version = attr: defi_assessment.__version__
author = CHEN Da
author_email = chendamailbox@foxmail.com
description = A prototype project to perfrom risk assessment for DeFi lending platforms.
long_description = file: README.md
project_urls = https://github.com/yuukidach/DeFi-Assessment

[options]
packages = find:
install_requires =
    Flask>=1.1.2
    requests>=2.26.0
    imbalanced_learn>=0.8.1
    numpy==1.19.2
    matplotlib>=3.4.3
    pandas>=1.3.4
    loguru>=0.5.3
    joblib>=1.1.0
    plotly>=5.3.1
    WTForms~=2.3.3
    nltk>=3.6.5
    textblob>=0.15.3
    tqdm~=4.62.3
    Keras>=2.4.3
    beautifulsoup4
    scikit_learn>=1.0.1

[options.entry_point]
console_scripts =
    dass = defi_assessment.cli:cli