[metadata]
name = DeFi Assessment
version = attr: defi_assessment.__version__
author = CHEN Da
author_email = chendamailbox@foxmail.com
description = A prototype project to perfrom risk assessment for DeFi lending platforms.
long_description = file: README.md
long_description_content_type = text/markdown
project_urls =
    Source = https://github.com/yuukidach/DeFi-Assessment

[options]
packages = find:
include_package_data = true
install_requires =
    Flask>=1.1.2
    requests>=2.26.0
    imbalanced_learn>=0.8.1
    matplotlib>=3.4.3
    pandas>=1.3.4
    loguru>=0.5.3
    joblib>=1.1.0
    plotly>=5.3.1
    WTForms~=2.3.3
    textblob>=0.15.3
    tqdm~=4.62.3
    Keras>=2.4.3
    beautifulsoup4
    scikit_learn>=1.0.1
    gensim>=4.0.0

[options.entry_points]
console_scripts =
    dass = defi_assessment.cli:cli

[options.extras_require]
    cpu = tensorflow>=2.4.0, <=2.5.0
    gpu = tensorflow-gpu>=2.4.0, <=2.5.0
